added office number

--- a/views/solar.html
+++ b/views/solar.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Home</strong> <span>Martellini Construction (443) 255-9586</span></a>
+						<a href="index.html" class="logo"><strong>Home</strong> <span>Martellini Construction +1 (443) 440-6540</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -184,7 +184,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(443) 255-9586</span>
+										<span>+1 (443) 440-6540</span>
 									</div>
 								</section>
 								<section>
